Explore and join datasets email opened and link clicked to emails table

--- a/Email Campaign - Take Home Challenge 7.ipynb
+++ b/Email Campaign - Take Home Challenge 7.ipynb
@@ -690,6 +690,416 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Explore emails opened dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>email_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>284534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>609056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>220820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>905936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>164034</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   email_id\n",
+       "0    284534\n",
+       "1    609056\n",
+       "2    220820\n",
+       "3    905936\n",
+       "4    164034"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emails_opened.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>email_id</th>\n",
+       "      <th>email_text</th>\n",
+       "      <th>email_version</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>user_country</th>\n",
+       "      <th>user_past_purchases</th>\n",
+       "      <th>email_opened</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>85120</td>\n",
+       "      <td>short_email</td>\n",
+       "      <td>personalized</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>US</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>966622</td>\n",
+       "      <td>long_email</td>\n",
+       "      <td>personalized</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>777221</td>\n",
+       "      <td>long_email</td>\n",
+       "      <td>personalized</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>493711</td>\n",
+       "      <td>short_email</td>\n",
+       "      <td>generic</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>106887</td>\n",
+       "      <td>long_email</td>\n",
+       "      <td>generic</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>US</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   email_id   email_text email_version  hour    weekday user_country  \\\n",
+       "0     85120  short_email  personalized     2     Sunday           US   \n",
+       "1    966622   long_email  personalized    12     Sunday           UK   \n",
+       "2    777221   long_email  personalized    11  Wednesday           US   \n",
+       "3    493711  short_email       generic     6     Monday           UK   \n",
+       "4    106887   long_email       generic    14     Monday           US   \n",
+       "\n",
+       "   user_past_purchases  email_opened  \n",
+       "0                    5         False  \n",
+       "1                    2          True  \n",
+       "2                    2         False  \n",
+       "3                    1         False  \n",
+       "4                    6         False  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Join Emails_Opened to Emails table as flag\n",
+    "emails['email_opened'] = emails['email_id'].isin(emails_opened['email_id'])\n",
+    "emails.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Explore emails link clicked dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>email_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>609056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>870980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>935124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>158501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>177561</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   email_id\n",
+       "0    609056\n",
+       "1    870980\n",
+       "2    935124\n",
+       "3    158501\n",
+       "4    177561"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emails_link_clicked.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>email_id</th>\n",
+       "      <th>email_text</th>\n",
+       "      <th>email_version</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>user_country</th>\n",
+       "      <th>user_past_purchases</th>\n",
+       "      <th>email_opened</th>\n",
+       "      <th>email_link_clicked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>85120</td>\n",
+       "      <td>short_email</td>\n",
+       "      <td>personalized</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>US</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>966622</td>\n",
+       "      <td>long_email</td>\n",
+       "      <td>personalized</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>777221</td>\n",
+       "      <td>long_email</td>\n",
+       "      <td>personalized</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>493711</td>\n",
+       "      <td>short_email</td>\n",
+       "      <td>generic</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>106887</td>\n",
+       "      <td>long_email</td>\n",
+       "      <td>generic</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>US</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   email_id   email_text email_version  hour    weekday user_country  \\\n",
+       "0     85120  short_email  personalized     2     Sunday           US   \n",
+       "1    966622   long_email  personalized    12     Sunday           UK   \n",
+       "2    777221   long_email  personalized    11  Wednesday           US   \n",
+       "3    493711  short_email       generic     6     Monday           UK   \n",
+       "4    106887   long_email       generic    14     Monday           US   \n",
+       "\n",
+       "   user_past_purchases  email_opened  email_link_clicked  \n",
+       "0                    5         False               False  \n",
+       "1                    2          True                True  \n",
+       "2                    2         False               False  \n",
+       "3                    1         False               False  \n",
+       "4                    6         False               False  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Join Emails_link_clicked to Emails table as flag\n",
+    "emails['email_link_clicked'] = emails['email_id'].isin(emails_link_clicked['email_id'])\n",
+    "emails.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
