Cleaned up modeling code and planned next steps

--- a/Email Campaign - Take Home Challenge 7.ipynb
+++ b/Email Campaign - Take Home Challenge 7.ipynb
@@ -1671,37 +1671,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1000.0, class_weight=None, dual=False,\n",
-       "          fit_intercept=True, intercept_scaling=1, max_iter=100,\n",
-       "          multi_class='ovr', n_jobs=1, penalty='l2', random_state=0,\n",
-       "          solver='liblinear', tol=0.0001, verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Perform logistic regression\n",
-    "lr=LogisticRegression(C=1000.0,random_state=0)\n",
-    "lr.fit(X_train_std,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 118,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
+    "#Perform logistic regression\n",
+    "lr=LogisticRegression(C=1000.0,random_state=0)\n",
+    "lr.fit(X_train_std,y_train)\n",
     "y_pred=lr.predict(X_test)"
    ]
   },
@@ -1714,108 +1692,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[28962,   387],\n",
-       "       [  525,   126]], dtype=int64)"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix :  [[28962   387]\n",
+      " [  525   126]]\n",
+      "Precision :  0.245614035088\n",
+      "Recall :  0.193548387097\n",
+      "F1 :  0.216494845361\n",
+      "Accuracy :  0.9696\n"
+     ]
     }
    ],
    "source": [
     "confmat=confusion_matrix(y_test,y_pred)\n",
-    "confmat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.24561403508771928"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "precisionscore=precision_score(y_test,y_pred)\n",
-    "precisionscore"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.19354838709677419"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "recallscore=recall_score(y_test,y_pred)\n",
-    "recallscore"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.21649484536082475"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "f1score=f1_score(y_test,y_pred)\n",
-    "f1score"
+    "accuracyscore=accuracy_score(y_test,y_pred)\n",
+    "print(\"Confusion Matrix : \",confmat)\n",
+    "print(\"Precision : \",precisionscore)\n",
+    "print(\"Recall : \",recallscore)\n",
+    "print(\"F1 : \",f1score)\n",
+    "print(\"Accuracy : \",accuracyscore)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 116,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.96960000000000002"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "accuracyscore=accuracy_score(y_test,y_pred)\n",
-    "accuracyscore"
+    "To Do : \n",
+    "    1) Make Functions for Data Prep, Random Forest, Logistic Regression, Performance Metrics\n",
+    "    2) Explain results using Performance Metrics\n",
+    "    3) Rerun without email opened field\n",
+    "    4) Comment Code\n",
+    "    5) Write Summary"
    ]
   },
   {
